fix overflow text alignment and zindex

--- a/packages/components/src/DataList/components/DataListTags/DataListTags.css
+++ b/packages/components/src/DataList/components/DataListTags/DataListTags.css
@@ -1,6 +1,7 @@
 .tags {
   display: flex;
   position: relative;
+  z-index: var(--elevation-default);
   overflow: hidden;
   gap: var(--space-small);
 }
@@ -8,11 +9,11 @@
 .tagCount {
   --overflow-bg: var(--color-white);
 
+  display: flex;
   position: absolute;
   top: 0;
   right: 0;
   height: 100%;
-  padding: 0;
   padding-left: var(--space-base);
   background-image: linear-gradient(
     90deg,
@@ -20,4 +21,5 @@
     var(--overflow-bg) var(--space-base),
     var(--overflow-bg) 100%
   );
+  align-items: center;
 }
